--- a/_data/faculty_members.yml
+++ b/_data/faculty_members.yml
@@ -1,23 +1,12 @@
-- name: Ling Chen
-  photo: ling.jpg
-  info: Professor
+- name: Miao Fang
+  photo: Miao.jpeg
+  info: Associate Professor
   email: PLACEHOLDER
-  affiliate: University of Technology Sydney
+  affiliate: Northeastern University at Qinhuang Dao
   role: Group founder & Co-lead
   url:
-    personal_site: https://profiles.uts.edu.au/Ling.Chen
-    google_scholar: https://scholar.google.com.au/citations?user=L5aYWQcAAAAJ&hl=en
+    personal_site: https://jsjytx.neuq.edu.cn/info/1041/1634.htm
+    google_scholar:
     github: 
     linkedin:
 
-- name: Meng Fang
-  photo: meng.jpg
-  info: Assistant Professor
-  email: PLACEHOLDER
-  affiliate: University of Liverpool
-  role: Group founder & Co-lead
-  url:
-    personal_site: https://mengf1.github.io/
-    google_scholar: https://scholar.google.com/citations?user=IcNYP1oAAAAJ&hl=en
-    github: https://github.com/hyintell/
-    linkedin:
