--- a/_data/bachelor_students.yml
+++ b/_data/bachelor_students.yml
@@ -20,6 +20,17 @@
     github: 
     linkedin: 
 
+- name: Lei Lei
+  photo: leilei.jpg
+  duration: 2023
+  cosupervision:
+  info: 
+  url:
+    personal_site: 
+    google_scholar: 
+    github: 
+    linkedin: 
+
 
 
 
