--- a/_data/faculty_members.yml
+++ b/_data/faculty_members.yml
@@ -1,5 +1,5 @@
 - name: Miao Fang
-  photo: Miao.jpeg
+  photo: miao.jpeg
   info: Associate Professor
   email: PLACEHOLDER
   affiliate: Northeastern University at Qinhuang Dao
