--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: The UTS NLP Group
+title: The NEUQ LIS Group
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Website of the UTS NLP Group.
+  Website of the NEUQ LIS Group.
 baseurl: ""
 url: ""
 
