--- a/_data/student_manager.yml
+++ b/_data/student_manager.yml
@@ -4,7 +4,7 @@
   cosupervision:
   info:
   url:
-    personal_site: 
+    personal_site: https://pbrqianjiang.github.io/
     google_scholar: 
     github: 
     linkedin: 
