--- a/_data/bachelor_students.yml
+++ b/_data/bachelor_students.yml
@@ -173,8 +173,8 @@
     github: 
     linkedin: 
 
-- name: Weixuan Lv
-  photo: lvweixuan.jpg
+- name: Weixuan Liu
+  photo: liuweixuan.jpg
   duration: 2021
   cosupervision:
   info: Master Student in East China Normal University
@@ -186,7 +186,7 @@
 
 
 - name: Jingfeng Wei
-  photo: Weijinfeng.jpg
+  photo: weijinfeng.jpg
   duration: 2021
   cosupervision:
   info: Research Assistant in Hong Kong University of Science and Technology
