--- a/_data/bachelor_students.yml
+++ b/_data/bachelor_students.yml
@@ -211,7 +211,7 @@
 
 
 - name: Zirui Song
-  photo: songzirui.jpg
+  photo: ziruisong.jpg
   duration: 2021
   cosupervision:
   info: PhD Student in Mohamed bin Zayed University of Artificial Intelligence
