--- a/_data/student_manager.yml
+++ b/_data/student_manager.yml
@@ -32,7 +32,7 @@
     github: 
     linkedin: 
 
-- name: Yiqi Duan
+- name: Yiqi Duan(Alumni)
   photo: duanyiqi.jpg
   duration: 2020
   cosupervision:
@@ -43,7 +43,7 @@
     github: 
     linkedin: 
 
-- name: Yuheng Ji
+- name: Yuheng Ji(Alumni)
   photo: jiyuheng.jpg
   duration: 2019
   cosupervision:
@@ -54,7 +54,7 @@
     github: 
     linkedin: 
 
-- name: Yue Liu
+- name: Yue Liu(Alumni)
   photo: liuyue.jpeg
   duration:  2018
   cosupervision: 
