--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -42,7 +42,7 @@
 
 - title: "MatchSeg: Towards Better Segmentation via Reference Image Matching"
   year: 2024
-  authors: Jiayu Huo†, Ruiqiang Xiao†, <b>Haotian Zheng†<b>, Yang Liu, Sébastien Ourselin, Rachel Sparks
+  authors: Jiayu Huo†, Ruiqiang Xiao†, <b>Haotian Zheng†</b>, Yang Liu, Sébastien Ourselin, Rachel Sparks
   venue: BIBM
   link:
     url: https://arxiv.org/abs/2403.15901
