--- a/_data/bachelor_students.yml
+++ b/_data/bachelor_students.yml
@@ -154,7 +154,7 @@
   photo: wangxuening.jpg
   duration: 2021
   cosupervision:
-  info: Master Studnet In Beijing Institute of Technology
+  info: Master Studnet in Beijing Institute of Technology
   url:
     personal_site: 
     google_scholar: 
@@ -166,7 +166,7 @@
   photo: wangxuening.jpg
   duration: 2021
   cosupervision:
-  info: Master Studnet In Beijing Institute of Technology
+  info: Master Studnet in Beijing Institute of Technology
   url:
     personal_site: 
     google_scholar: 
