--- a/_data/news.yml
+++ b/_data/news.yml
@@ -7,9 +7,11 @@
 - date: Oct 2024
   headline: We have 1 new paper accepted at **EMNLP 2024**, congratulations to all students and collaborators!
 
+- date: Sep 2024
+  headline: We have 1 new paper accepted at **ACM MM 2024**, congratulations to all students and collaborators!
+
+- date: July 2024
+  headline: We have 1 new paper accepted at **ECCV 2024**, congratulations to all students and collaborators!
+
 - date: Mar 2024
   headline: We have 1 new paper accepted at **BIBM 2024**, congratulations to all students and collaborators!
-
-- date: Sep 2024
-  headline: We have 1 new paper accepted at **ECCV 2024**, congratulations to all students and collaborators!
-  
