--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -91,7 +91,7 @@
     
 - title: "Frequency Point Game Environment for UAV Path Planning via Large Language Models"
   year: 2025
-  authors: <b>Jingpu Yang</b>, Hang Zhang, Fengxian Ji, Yufeng Wang, Mingjie Wang, Yizhe Luo, Wenrui Ding
+  authors: <b>Jingpu Yang</b>, Hang Zhang, <b>Fengxian Ji</b>, Yufeng Wang, Mingjie Wang, Yizhe Luo, Wenrui Ding
   venue: arXiv
   link:
     url: https://arxiv.org/pdf/2503.44196
