--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -108,7 +108,7 @@
   authors: Yangfan He, Yinghui Xia, <b>Jinfeng Wei</b>, Tianyu Shi, Yang Jingsong
   venue: NeurIPS 2024 Workshop
   link:
-    url: https://arxiv.org/pdf/2503.44196
+    url: https://openreview.net/forum?id=Bc6bwixyVX
 
 
 
