--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -20,7 +20,7 @@
 - title: "BenchLMM: Benchmarking Cross-style Visual Capability of Large Multimodal Models"
   year: 2024
   authors: Rizhao Cai†, <b>Zirui Song†</b>, Dayan Guan, Zhenhao Chen, Xing Luo, Chenyu Yi, Alex Kot
-  venue: ECCV, 2024
+  venue: ECCV 2024
   link:
     url: https://arxiv.org/abs/2312.02896
 
