--- a/_data/bachelor_students.yml
+++ b/_data/bachelor_students.yml
@@ -10,7 +10,7 @@
     linkedin: 
 
 - name: Mingxuan Cui
-  photo: zhangyusong.jpg
+  photo: cuimingxuan.jpg
   duration: 2023
   cosupervision:
   info: 
