--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -12,7 +12,7 @@
 
 
 - name: Longyan Hong
-  photo: honglongyan.jpeg
+  photo: honglongyan.jpg
   duration:  2019 - 2023
   cosupervision: 
   info: R&D Engineer, Xiaomi
