--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -22,3 +22,14 @@
     github: 
     linkedin: 
 
+- name: Mengyu Xiang
+  photo: xiangmengyu.jpg
+  duration: 2020 - 2024
+  cosupervision: 
+  info: Master Student, University of Science and Technology of China
+  url:
+    personal_site: 
+    google_scholar: 
+    github: 
+    linkedin: 
+
