--- a/_data/bachelor_students.yml
+++ b/_data/bachelor_students.yml
@@ -197,7 +197,7 @@
 
 
 - name: Yixuan Wu
-  photo: wangyixuan.jpg
+  photo: wuyixuan.jpg
   duration: 2021
   cosupervision:
   info: Master Student in Sun Yat-sen University
