--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -56,7 +56,7 @@
 
 - title: "MMAC-Copilot: Multi-modal Agent Collaboration Operating System Copilot"
   year: 2024
-  authors: <b>Zirui Song</b>, Yaohang Li, Meng Fang, Zhenhao Chen, <b>Zecheng Shi</b>, <b>Yuan Huang</b>, Ling Chen
+  authors: <b>Zirui Song</b>, Yaohang Li, Meng Fang, Zhenhao Chen, <b>Zhecheng Shi</b>, <b>Yuan Huang</b>, Ling Chen
   venue: arXiv
   link:
     url: https://arxiv.org/abs/2404.18074
