--- a/_data/student_manager.yml
+++ b/_data/student_manager.yml
@@ -28,8 +28,8 @@
   info: Master Student in Beihang University
   url:
     personal_site: 
-    google_scholar:
-    github: 
+    google_scholar:https://scholar.google.com/citations?user=0MWXQ5kAAAAJ&hl=en
+    github: https://github.com/yydsok
     linkedin: 
 
 - name: Yiqi Duan(Alumni)
